Async overflow scroll on iOS paints slowly if it has a negative z-index child https://bugs.webkit.org/show_bug.cgi?id=196508 rdar://problem/49532709

Reviewed by Dean Jackson.
Source/WebCore:

If a RenderLayerBacking had a foreground layer and a scrolled contents layer, every geometry
update would change the size and offsetFromRenderer of the foreground layer between two
states, triggering repaint.

Fix by updating the fore- and background-layers last (nothing elese has dependencies
on their geometry), and using GraphicsLayer::DontSetNeedsDisplay as we do for the
scrolled contents layer.

The test also revealed a bug where the shapeMaskLayer would get incorrect geometry when scrollbars
were visible, because it would be squished by setting the wrong bounds, so fix that.

Test: compositing/repaint/scroller-with-foreground-layer-repaints.html

* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateClippingStrategy):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGeometry):

LayoutTests:

* compositing/geometry/scroller-with-clipping-and-foreground-layers-expected.html: Added.
* compositing/geometry/scroller-with-clipping-and-foreground-layers.html: Added.
* compositing/repaint/scroller-with-foreground-layer-repaints-expected.txt: Added.
* compositing/repaint/scroller-with-foreground-layer-repaints.html: Added.
* platform/ios-wk2/compositing/repaint/scroller-with-foreground-layer-repaints-expected.txt: Added.
* platform/mac-wk1/compositing/repaint/scroller-with-foreground-layer-repaints-expected.txt: Added.


Canonical link: https://commits.webkit.org/212484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246018 268f45cc-cd09-0410-ab3c-d52691b4dbfc